[gd_scene load_steps=2 format=3 uid="uid://taeoeye2d02o"]

[ext_resource type="Script" path="res://ui/components/notification_popup.gd" id="1_2uci2"]

[node name="NotificationPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2uci2")

[node name="StatusPopup" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.862745)

[node name="NotificationLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -11.0
offset_right = 500.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Some status message..."
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
text = "OK"

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
